--- a/flask_app/static/edit_event.css
+++ b/flask_app/static/edit_event.css
@@ -1,1 +1,56 @@
+.right_side {
+    margin-left: 100px;
+}
 
+.update_event {
+    display: flex;
+    flex-direction: column;
+    margin-left: 100px;
+    margin-top: 20px;
+}
+
+
+.sub {
+    display: flex;
+    flex-direction: column;
+    width: 200px;
+}
+
+.sub1 {
+    display: flex;
+    flex-direction: column;
+    width: 400px;
+}
+
+.sub2 {
+    display: flex;
+    flex-direction: column;
+    width: 200px;
+}
+
+.sub3 {
+    display: flex;
+    flex-direction: column;
+    width: 250px;
+}
+
+.sub,
+.sub1,
+.sub2,
+.sub3 {
+    margin-bottom: 5px;
+}
+
+.add_event {
+    margin-left: 100px;
+}
+
+.body {
+    margin-left: 100px;
+}
+
+#sub_btn {
+    box-shadow: 3px 3px black;
+    margin-top: 5px;
+    margin-left: 142px;
+}
